@@ -6,6 +6,7 @@ Revision history for XML::CompareML
     - Changed the license ID from "bsd" to "mit" which is more accurate.
     - Moved "Test::More" and "IO::Scalar" to the build_requires.
     - now generating a Makefile.PL from the Build.PL.
+    - added an example under examples/.
 0.2.2    Fri Feb 29 17:24:55 IST 2008
     - Fixed the die in the last patch to reference the name correctly.
 0.2.1    Fri Feb 29 17:02:49 IST 2008
